@@ -143,16 +143,18 @@ public class ProductService {
             }
         }
 
-        return productRepository.findAllWithFilter(keyword, categoryId, status).stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+        List<Product> products = productRepository.findAllWithFilter(keyword, categoryId, status);
+        Map<Long, Long> soldCountMap = buildSoldCountMap(products.stream().map(Product::getId).toList());
+
+        return convertToResponseList(products, soldCountMap);
     }
 
     @Transactional(readOnly = true)
     public List<ProductResponse> getAll() {
-        return productRepository.findAllWithDetails().stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+        List<Product> products = productRepository.findAllWithDetails();
+        Map<Long, Long> soldCountMap = buildSoldCountMap(products.stream().map(Product::getId).toList());
+
+        return convertToResponseList(products, soldCountMap);
     }
 
     @Transactional(readOnly = true)
@@ -662,6 +664,27 @@ public class ProductService {
         return convertToResponse(product, buildSoldCountMap(List.of(product.getId())));
     }
 
+    private List<ProductResponse> convertToResponseList(List<Product> products, Map<Long, Long> soldCountMap) {
+        if (products == null || products.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        return products.stream()
+                .map(product -> convertToResponse(product, soldCountMap))
+                .collect(Collectors.toList());
+    }
+
+    private List<ProductVariant> getActiveDisplayVariants(Product product) {
+        if (product == null || product.getVariants() == null) {
+            return Collections.emptyList();
+        }
+
+        return product.getVariants().stream()
+                .filter(variant -> variant.getStatus() == VariantStatus.ACTIVE)
+                .filter(this::hasOnlyActiveAttributes)
+                .collect(Collectors.toList());
+    }
+
     private ProductResponse convertToResponse(Product product, Map<Long, Long> soldCountMap) {
         User currentUser = getCurrentUser();
 
@@ -753,27 +776,20 @@ public class ProductService {
 
     public ProductVariantResponse mapVariantToResponse(ProductVariant variant, User currentUser, BigDecimal multiplier,
             String roundingRule, List<Inventory> allInventories) {
-        // Tránh lỗi NullPointerException khi role null
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        boolean hasExportPermission = auth != null && auth.getAuthorities().stream()
-                .anyMatch(a -> a.getAuthority().equals("EXPORT_CREATE") || a.getAuthority().equals("TRANSFER_CREATE"));
-
-        Role currentRole = currentUser != null ? currentUser.getRole() : null;
-        String roleSlug = (currentRole != null && currentRole.getSlug() != null)
-                ? currentRole.getSlug().toUpperCase()
-                : "";
-        boolean isAdmin = "ADMIN".equals(roleSlug)
-                || (currentRole != null && currentRole.getId() != null && currentRole.getId() == 1L)
-                || (currentRole != null && currentRole.getDisplayName() != null
-                        && "QUẢN TRỊ VIÊN".equalsIgnoreCase(currentRole.getDisplayName()));
-        boolean isManager = "MANAGER".equals(roleSlug) || "BRANCH_MANAGER".equals(roleSlug);
-
-        boolean canSeeImportPrice = isAdmin || isManager || hasExportPermission;
+        Set<String> authorities = auth == null
+                ? Set.of()
+                : auth.getAuthorities().stream()
+                        .map(a -> a.getAuthority())
+                        .collect(Collectors.toSet());
+        boolean canSeeImportPrice = authorities.contains("REPORT_FINANCE_VIEW")
+                || authorities.contains("IMPORT_VIEW")
+                || authorities.contains("EXPORT_CREATE")
+                || authorities.contains("TRANSFER_CREATE")
+                || authorities.contains("PURCHASE_REQUEST_VIEW");
 
         Branch currentBranch = currentUser != null ? currentUser.getBranch() : null;
-
-        // Chỉ Admin mới được thấy tồn kho/lô hàng của tất cả chi nhánh.
-        boolean canSeeAllBranches = isAdmin;
+        boolean canSeeAllBranches = currentBranch == null;
 
         List<Inventory> validBatches = allInventories.stream()
                 .filter(inv -> inv.getQuantity() != null && inv.getQuantity() > 0)
@@ -1019,8 +1035,7 @@ public class ProductService {
         Map<Long, Long> soldCountMap = buildSoldCountMap(
                 products.stream().map(Product::getId).toList());
 
-        return products.stream()
-                .map(product -> convertToResponse(product, soldCountMap))
+        return convertToResponseList(products, soldCountMap).stream()
                 .filter(p -> p.getInventory() != null && p.getInventory() > 0)
                 .collect(Collectors.toList());
     }
@@ -1031,8 +1046,7 @@ public class ProductService {
         Map<Long, Long> soldCountMap = buildSoldCountMap(
                 products.stream().map(Product::getId).toList());
 
-        return products.stream()
-                .map(product -> convertToResponse(product, soldCountMap))
+        return convertToResponseList(products, soldCountMap).stream()
                 .filter(p -> p.getInventory() != null && p.getInventory() > 0)
                 .limit(limit)
                 .collect(Collectors.toList());
@@ -1073,8 +1087,7 @@ public class ProductService {
         List<Product> products = productRepository.findPublicByIds(productIds);
         Map<Long, Long> soldCountMap = buildSoldCountMap(productIds);
 
-        return products.stream()
-                .map(product -> convertToResponse(product, soldCountMap))
+        return convertToResponseList(products, soldCountMap).stream()
                 .filter(p -> p.getInventory() != null && p.getInventory() > 0)
                 .collect(Collectors.toList());
     }
@@ -1098,8 +1111,7 @@ public class ProductService {
         List<Product> products = productRepository.findPublicByIds(productIds);
         Map<Long, Long> soldCountMap = buildSoldCountMap(productIds);
 
-        return products.stream()
-                .map(product -> convertToResponse(product, soldCountMap))
+        return convertToResponseList(products, soldCountMap).stream()
                 .filter(p -> p.getInventory() != null && p.getInventory() > 0)
                 .collect(Collectors.toList());
     }
@@ -1157,10 +1169,12 @@ public class ProductService {
         Map<Long, Product> productsById = productRepository.findPublicByIds(productIds).stream()
                 .collect(Collectors.toMap(Product::getId, product -> product));
 
-        List<ProductResponse> productResponses = productIds.stream()
+        List<Product> orderedProducts = productIds.stream()
                 .map(productsById::get)
                 .filter(Objects::nonNull)
-                .map(product -> convertToResponse(product, soldCountMap))
+                .collect(Collectors.toList());
+
+        List<ProductResponse> productResponses = convertToResponseList(orderedProducts, soldCountMap).stream()
                 .map(p -> applyPublicListVariantFilters(p, minPrice, maxPrice, packagingValueIdList, packagingValues))
                 .filter(p -> p.getVariants() != null && !p.getVariants().isEmpty())
                 .collect(Collectors.toList());
